Add plugins settings page proto

--- a/src/qml/glacier-music.qrc
+++ b/src/qml/glacier-music.qrc
@@ -13,5 +13,6 @@
         <file>pages/LibraryPage.qml</file>
         <file>glacier-music.qml</file>
         <file>components/TrackLabelArea.qml</file>
+        <file>pages/SettingsPluginPage.qml</file>
     </qresource>
 </RCC>
